--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://yash:yash5302@cluster0.xi7cwdw.mongodb.net/untoldblog
-CLERK_SECRET_KEY=sk_test_dyZUYLIteH8izmv6kjaLjCUPgqHuILTnP5YmR0FG8i
+MONGODB_URI=""
+CLERK_SECRET_KEY=""
